[gd_scene load_steps=3 format=3 uid="uid://dety1mr3r2ho0"]

[ext_resource type="Script" uid="uid://djvvrupsluljy" path="res://menus/player_slot.gd" id="1_v75lr"]
[ext_resource type="Texture2D" uid="uid://dyf2tlsdgaykh" path="res://icon.svg" id="2_wsl4u"]

[node name="PlayerSlot" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v75lr")

[node name="Panel" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
texture = ExtResource("2_wsl4u")

[node name="CenterContainer2" type="CenterContainer" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 0

[node name="ReadyButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/CenterContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Ready"

[node name="ReadyLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/CenterContainer2"]
unique_name_in_owner = true
layout_mode = 2
